# MediLite

./: README.md
ragfm2/: ingest.py  main.py  model.py  pyproject.toml  requirements.txt
ragfm2/vectorstores/db_faiss/: index.pkl
