[project]
name = "ragfm2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.0",
    "chainlit>=2.8.2",
    "faiss-cpu>=1.12.0",
    "huggingface-hub>=0.35.3",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "pypdf>=6.1.1",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]
